ingress/ingress-01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devstein-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "devstein.com"  
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nginx-hello-world
            port:
              number: 80
