ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devstein-ingress
  namespace: testing-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "devstein.com"  
    http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-red
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-green
            port:
              number: 80
